# djangogcp

./: README.md  app.yaml  main.py  manage.py  pyproject.toml  requirements.txt
djangogcp/: asgi.py  settings.py  urls.py  wsgi.py
