[tool.poetry]
name = "djangogcp"
version = "0.1.0"
description = ""
authors = ["Gustavo M Pires"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
asgiref = "^3.3.1"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
